나의 DB정보 연동하기 세번째커밋(200810)

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,8 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/spring/root-context.xml
-		             /WEB-INF/spring/security-context_db.xml <!-- 추가해주기 -->
+					 <!-- /WEB-INF/spring/security-context.xml  -->
+		            /WEB-INF/spring/security-context_db.xml  <!-- 추가해주기 -->
 		</param-value>  
 	</context-param>
 	
